<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">365 NGÀY HÔN NHÂN</string>
    <string name="author">Tác giả: </string>
    <string name="add_book">Thêm Truyện</string>
    <string name="chapter_id">chapter_id</string>
    <string name="chapter_notification">Bạn có muốn đánh dấu chương này không?</string>
    <string name="close">Đóng</string>
    <string name="exit">Thoát</string>
    <string name="exit_notification">Bạn hãy dành chút thời gian để đánh giá cho ứng dụng nhé ^^. Xin cảm ơn.</string>
    <string name="error_no_internet">Không có kết nối internet. Mong các bạn kiểm tra lại ^^.</string>
    <string name="introduction">Giới Thiệu</string>
    <string name="larger">Chữ lớn hơn</string>
    <string name="no">Không</string>
    <string name="preference_file_key">com.daniel.readingbook.batramsaunamngayhonnhan.PREFERENCE_FILE_KEY</string>
    <string name="read_book">Đọc Truyện</string>
    <string name="smaller">Chữ nhỏ đi</string>
    <string name="type">Thể loại: </string>
    <string name="yes">Có</string>

</resources>