<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="@dimen/dialog_width"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/dialog_error_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:visibility="visible"
        style="@style/Dialog.Title" />

    <TextView
        android:id="@+id/dialog_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dialog_error_title"
        android:gravity="center"
        android:text="@string/error_no_internet"
        style="@style/Dialog.Message" />

    <View
        android:id="@+id/dialog_error_divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:src="@color/gray"
        android:layout_below="@id/dialog_error_message" />

    <Button
        android:id="@+id/dialog_error_close"
        android:layout_centerHorizontal="true"
        android:text="@string/close"
        style="@style/Dialog.Button.LeftRightCorner"
        android:layout_below="@id/dialog_error_divider" />

</RelativeLayout>